  o Add support for 24-bit PCM raw, wav (WAVE_FORMAT_EXTENSIBLE) [FR# 801015],
    au, aiff, & flac files. (robs)
  o Added aliases -1 (for -b), -2 (for -w), -4 (for -l), -8 (for -d),
    dither (for mask). (robs)
  o Dither/mask amount now specifiable.  (robs)
  o Remove old, optional rate change and alaw/ulaw conversion code.
    (Reuben Thomas)
  o Remove soxmix.  (Reuben Thomas)
  o Consistent (and hopefully complete) clipping detection and
    reporting.  (robs)
  o Add AIFF-C output support.  (shashimoto)
  o -V now gives only user-relevant messages, use -V -V to get
    developer-relevant messages.  (robs)
  o Old and new rate code removed; the "rate" effect is implemented
    for backwards compatibility by "resample".
  o Preview mode now removed, as all it did was use rate rather than
    resample, and rate has been removed.
  o Improved synth usage (by introducing -n option) and improved synth
    entry in the man-page.  (robs)
  o Documented the butterworth filter effects.  (robs)
  o Added command line options for specifying the output file
    comment.  (robs)
  o Improved the accuracy of integer and floating point PCM
    conversions.  (robs)
  o Added large file support.  (Reuben Thomas)
  o Higher quality audio speed adjustment; also fixes [1155364].  (robs)
  o Replacement flanger effect; also fixes [1393245].  (robs)
  o Added ability to merge e.g. 2 mono files to 1 stereo file
    [FR# 1297076].  (robs)
  o Added Lua effect, which allows arbitrary processing by a Lua script.
    (Reuben Thomas)
  o Several effects are now optimised out in situations where they need
    do nothing, e.g. changing rate from 8000 to 8000, or changing volume
    by 0dB [Bug# 1395781].  (robs)
  o Removed (for output file only) the potentially
    problematic -v option.  Use the vol effect instead.  (robs)
  o Added --interactive option to prompt to overwrite pre-existing
    output file.  (robs)
  o Added silence padding effect.  (robs)