@@ -11,7 +11,6 @@ bandreject	see bandpass
 bass		y	y
 chorus		y	y
 compand		y	y
-copy		n	n
 dcshift		y	c
 deemph		n	n
 dither		see mask
